# beauty-salon

./: README.md  pyproject.toml
.github/workflows/: ci.yml
beauty_salon/: __init__.py  hooks.py  modules.txt
beauty_salon/accounts/doctype/account/: account.js  account.json  account.py  test_account.py
beauty_salon/accounts/doctype/cost_center/: cost_center.js  cost_center.json  cost_center.py  test_cost_center.py
beauty_salon/buying/doctype/supplier/: supplier.js  supplier.json  supplier.py  test_supplier.py
beauty_salon/setup/doctype/brand/: brand.json
beauty_salon/setup/doctype/item_group/: item_group.json
beauty_salon/setup/doctype/supplier_group/: supplier_group.json
beauty_salon/setup/doctype/uom/: uom.json
beauty_salon/stock/doctype/item/: item.js  item.json  item.py  test_item.py
beauty_salon/stock/doctype/item_barcode/: item_barcode.json  item_barcode.py
beauty_salon/stock/doctype/item_default/: item_default.json  item_default.py
beauty_salon/stock/doctype/item_group/: item_group.js  item_group.json  item_group.py  test_item_group.py
beauty_salon/stock/doctype/item_tax/: item_tax.json  item_tax.py
beauty_salon/stock/doctype/material_request/: material_request.js  material_request.json  material_request.py  test_material_request.py
beauty_salon/stock/doctype/price_list/: price_list.js  price_list.json  price_list.py  test_price_list.py
beauty_salon/stock/doctype/stock_entry/: stock_entry.js  stock_entry.json  stock_entry.py  test_stock_entry.py
beauty_salon/stock/doctype/stock_entry_detail/: stock_entry_detail.json  (+1 more)
(+12 files in other folders)
